--- a/package.json
+++ b/package.json
@@ -13,14 +13,23 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "supabase:init": "supabase init",
+    "supabase:login": "supabase login",
+    "supabase:link": "supabase link --project-ref vqcwezgxpnxsnoibhahl",
+    "db:migrate:new": "supabase migration new projects-schema",
+    "db:reset": "supabase db reset --linked",
+    "db:seed": "node --env-file=.env database/seed.js",
+    "supabase:types": "npx supabase gen types typescript --project-id vqcwezgxpnxsnoibhahl --schema public > database/types.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.2.1",
     "@vitejs/plugin-vue": "^6.0.1",
@@ -32,7 +41,9 @@
     "jiti": "^2.5.1",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
+    "supabase": "^2.34.3",
     "typescript": "~5.9.2",
+    "unplugin-vue-router": "^0.15.0",
     "vite": "^7.1.2",
     "vite-plugin-vue-devtools": "^8.0.0",
     "vue-tsc": "^3.0.5"
