--- a/package.json
+++ b/package.json
@@ -17,14 +17,25 @@
     "supabase:init": "supabase init",
     "supabase:login": "supabase login",
     "supabase:link": "supabase link --project-ref vqcwezgxpnxsnoibhahl",
-    "db:migrate:new": "supabase migration new projects-schema",
+    "db:migrate:new": "supabase migration new",
     "db:reset": "supabase db reset --linked",
     "db:seed": "node --env-file=.env database/seed.js",
     "supabase:types": "npx supabase gen types typescript --project-id vqcwezgxpnxsnoibhahl --schema public > database/types.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vueuse/core": "^13.6.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "iconify-icon": "^3.0.0",
+    "lucide-vue-next": "^0.539.0",
     "pinia": "^3.0.3",
+    "reka-ui": "^2.4.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
