--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prettier": "3.6.2",
     "supabase": "^2.34.3",
     "typescript": "~5.9.2",
+    "unplugin-auto-import": "^20.0.0",
     "unplugin-vue-router": "^0.15.0",
     "vite": "^7.1.2",
     "vite-plugin-vue-devtools": "^8.0.0",
