--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-VITE_SUPABASE_URL = [SUPABASE_URL],
-VITE_SUPABASE_KEY = [SUPABASE_KEY],
-SERVICE_ROLE_KEY = [SUPABASE_SERVICE_ROLE_KEY]
+VITE_SUPABASE_URL = 
+VITE_SUPABASE_KEY = 
+SERVICE_ROLE_KEY = 
+TESTING_USER_EMAIL =
